2009-09-08  Mike Krüger  <mkrueger@novell.com>

	* Parser/CSharpFormatter.cs: Improved formatting merge
	  algorithm (fixing Bug 537374 - On-the-fly formatting: New
	  line incorrectly inserted in property).

2009-09-08  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpAmbience.cs:
	* Parser/FindMemberAstVisitor.cs: Removed debug message.

2009-09-08  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorIndentation.cs: fixed "Bug 537187 - When
	  'interpret tab as reindent' option is set, code templates
	  don't work".

2009-09-08  Mike Krüger  <mkrueger@novell.com>

	* Parser/CSharpFormatter.cs: Fixed "Bug 537318 - Text curser
	  misplaced on automatic refactoring (adding spaces etc. when
	  pressing ';')".

2009-09-08  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorIndentation.cs: fixed "Bug 537187 - When
	  'interpret tab as reindent' option is set, code templates
	  don't work".

2009-09-03  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpAmbience.cs: fixed c# ambience for nested types
	  (they work a bit different now).

2009-09-02  Mike Krüger  <mkrueger@novell.com>

	* Gui/ResolveVisitor.cs: Made a better fix for the explicit
	  member bug (but a recreation of the code completion database
	  is required to make it work).

2009-09-02  Mike Krüger  <mkrueger@novell.com>

	* Gui/ResolveVisitor.cs: Fixed failing unit test.

2009-09-02  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpAmbience.cs: Fixed "Bug 536111 - Nested generic
	  types should not show <> on code completion".

2009-09-01  Mike Krüger  <mkrueger@novell.com>

	* Parser/CSharpNRefactoryASTProvider.cs: Implementet
	  parsetypereference.

2009-09-01  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: Fixed "Bug 535187 - Resolver
	  result wrong when property name matches type".

2009-08-31  Mike Krüger  <mkrueger@novell.com>

	* Parser/CodeGenerator.cs: Fixed unit tests.

2009-08-27  Mike Krüger  <mkrueger@novell.com>
