@@ -1,3 +1,9 @@
+2009-09-10  Mike Krüger  <mkrueger@novell.com>
+
+	* Parser/CSharpFormatter.cs:
+	* Gui/CSharpTextEditorIndentation.cs: Track API changes/worked
+	  on code formatter.
+
 2009-09-08  Mike Krüger  <mkrueger@novell.com>
 
 	* Parser/CSharpFormatter.cs: Improved formatting merge
